[gd_scene load_steps=2 format=3 uid="uid://c0rugj0nhxkl"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_2mgya"]

[node name="main-menu" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mgya")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 347.0
offset_top = 11.0
offset_right = 765.0
offset_bottom = 124.0
text = "Pavel's Adventures"
horizontal_alignment = 1
vertical_alignment = 1

[node name="buttons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="start" type="Button" parent="buttons"]
layout_mode = 2
offset_left = 389.0
offset_top = 205.0
offset_right = 745.0
offset_bottom = 272.0
tooltip_text = "NOT AVAILABLE IN BETA"
text = "Enter pavel's magical world"

[node name="training" type="Button" parent="buttons"]
layout_mode = 2
offset_left = 387.0
offset_top = 279.0
offset_right = 743.0
offset_bottom = 346.0
text = "Explore the millions of movement mechanics"

[node name="quit" type="Button" parent="buttons"]
layout_mode = 2
offset_left = 382.0
offset_top = 359.0
offset_right = 741.0
offset_bottom = 412.0
text = "quit"

[node name="Version" type="Label" parent="."]
layout_mode = 0
offset_left = 967.0
offset_top = 597.0
offset_right = 1145.0
offset_bottom = 645.0
text = "Version: alpha 0.0.1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="buttons/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="buttons/training" to="." method="_on_training_pressed"]
[connection signal="pressed" from="buttons/quit" to="." method="_on_quit_pressed"]
